--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,7 @@
     {% endblock %}
 </head>
 <body>
+
 <!-- 插入到页面标题上方 -->
 {% for message in get_flashed_messages() %}
     <div class="alert">{{ message }}</div>
@@ -18,6 +19,12 @@
         <img alt="Avatar" class="avatar" src="{{ url_for('static', filename='images/avatar.png') }}">
         {{ user.name }}'s Watchlist
     </h2>
+{% if current_user.is_authenticated %}
+    <li><a href="{{ url_for('settings') }}">Settings</a></li>
+    <li><a href="{{ url_for('logout') }}">Logout</a></li>
+{% else %}
+    <li><a href="{{ url_for('login') }}">Login</a></li>
+{% endif %}
     <nav>
         <ul>
             <li><a href="{{ url_for('index') }}">Home</a></li>
