--- a/templates/edit.html
+++ b/templates/edit.html
@@ -1,10 +1,68 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h3>Edit item</h3>
-<form method="post">
-    Name <input type="text" name="title" autocomplete="off" required value="{{ movie.title }}">
-    Year <input type="text" name="year" autocomplete="off" required value="{{ movie.year }}">
-    <input class="btn" type="submit" name="submit" value="Update">
-</form>
+<div class="container mt-4">
+    <h3>Edit item</h3>
+    <form method="post">
+        <div class="form-group">
+            <label for="movie_name">Name</label>
+            <input type="text" class="form-control" id="movie_name" name="movie_name" autocomplete="off" required
+                   value="{{ combined_data.movie_name }}">
+        </div>
+        <div class="form-group">
+            <label for="year">Year</label>
+            <input type="text" class="form-control" id="year" name="year" autocomplete="off" required
+                   value="{{ combined_data.year }}">
+        </div>
+        <div class="form-group">
+            <label for="release_date">Release Date</label>
+            <input type="text" class="form-control" id="release_date" name="release_date" autocomplete="off" required
+                   value="{{ combined_data.release_date }}">
+        </div>
+        <div class="form-group">
+            <label for="country">Country</label>
+            <input type="text" class="form-control" id="country" name="country" autocomplete="off" required
+                   value="{{ combined_data.country }}">
+        </div>
+        <div class="form-group">
+            <label for="movie_type">Type</label>
+            <input type="text" class="form-control" id="movie_type" name="movie_type" autocomplete="off" required
+                   value="{{ combined_data.type }}">
+        </div>
+        <div class="form-group">
+            <label for="box">Box</label>
+            <input type="text" class="form-control" id="box" name="box" autocomplete="off" required
+                   value="{{ combined_data.box }}">
+        </div>
+        <div class="actors-group">
+            <h4>演员列表</h4>
+            {% for actor in combined_data.actors %}
+            <div class="actor">
+                <h5 class="mt-4">演员: {{ actor.actor_name }}</h5>
+                <input type="hidden" name="actor_id[]" value="{{ actor.actor_id }}"/>
+                <input type="hidden" name="actor_id[]" value="|"/>
+                <div class="form-group">
+                    <label for="gender">性别</label>
+                    <input type="text" class="form-control" id="gender" name="gender" autocomplete="off" required
+                           value="{{ actor.gender }}" readonly>
+                </div>
+                <div class="relations-group">
+                    <h6>关系列表</h6>
+                    {% for relation in actor.relations %}
+                    <div class="relation">
+                        <div class="form-group">
+                            <label for="relation_type">关系类型</label>
+                            <input type="text" class="form-control" id="relation_type" name="relation_type[]"
+                                   autocomplete="off" required value="{{ relation.relation_type }}">
+                        </div>
+                    </div>
+                    {% endfor %}
+                    <input type="hidden" name="relation_type[]" value="|"/>
+                </div>
+            </div>
+            {% endfor %}
+        </div>
+        <input class="btn btn-primary" type="submit" name="submit" value="Update">
+    </form>
+</div>
 {% endblock %}
