--- a/templates/edit.html
+++ b/templates/edit.html
@@ -35,7 +35,7 @@
                    value="{{ combined_data.box }}">
         </div>
         <div class="actors-group">
-            <h4>演员列表</h4>
+            <h4>演职人员列表</h4>
             {% for actor in combined_data.actors %}
             <div class="actor">
                 <h5 class="mt-4">演员: {{ actor.actor_name }}</h5>
