--- a/templates/index.html
+++ b/templates/index.html
@@ -3,26 +3,26 @@
 {% block content %}
 
 
-<p>{{ new_combined_data|length }} Titles</p>
-<!--<ul class="movie-list">-->
-<!--    {% for data in combined_data %}-->
-<!--    <li>{{ data.movie_name }} - {{ data.year }} - {{ data.release_date }} - {{ data.country }} - {{ data.type }}</li>-->
-<!--    <li>Box Office: {{ data.box }}</li>-->
-<!--    <li>Actor: {{ data.actor_name }} - Gender: {{ data.gender }} - Country: {{ data.country }}</li>-->
-<!--    <li>Relation Type: {{ data.relation_type }}</li>-->
-<!--    <span class="float-right">-->
-<!--        <a class="imdb" href="https://www.imdb.com/find?q={{ data.movie_name }}" target="_blank"-->
-<!--           title="Find this movie on IMDb">IMDb</a>-->
-<!--        <a class="btn" href="{{ url_for('edit', movie_id=data.movie_id) }}">详情</a>-->
-<!--        <a class="btn" href="{{ url_for('edit', movie_id=data.movie_id) }}">Edit</a>-->
-<!--        <form class="inline-form" method="post" action="{{ url_for('.delete', movie_id=data.movie_id) }}">-->
-<!--             <input class="btn" type="submit" name="delete" value="Delete"-->
-<!--                    onclick="return confirm('Are you sure?')">-->
-<!--        </form>-->
-<!--    </span>-->
-<!--    {% endfor %}-->
+<script>
 
-<!--</ul>-->
+    function addActorRow() {
+  var table = document.getElementById("actorTable");
+  console.log(table)
+  var newRow = table.insertRow(table.rows.length - 1); // 插入在倒数第二行（倒数第一行是提交按钮）
+
+  var cell1 = newRow.insertCell(0);
+  var cell2 = newRow.insertCell(1);
+  var cell3 = newRow.insertCell(2);
+
+  cell1.innerHTML = '<tr><label for="actor">actor</label>';
+  cell2.innerHTML = '<input type="text" class="form-control" name="actors" autocomplete="off" required></tr>';
+  cell3.innerHTML = '<tr><label for="relation">relation</label><input type="text" class="form-control"  name="relation" autocomplete="off" required></tr>';
+}
+
+</script>
+
+<p>{{ new_combined_data|length }} Titles</p>
+
 <form action="/query" method="POST">
     <div>
         <label for="searchType">根据类型查找：</label>
@@ -44,47 +44,30 @@
 
     <!--    <li>Actor: {{ data.actor_name }} - Gender: {{ data.gender }} - Country: {{ data.country }}</li>-->
     <!--    <li>Relation Type: {{ data.relation_type }}</li>-->
-    <li>    <span class="float-right">
+    <li>
+
         <a class="imdb" href="https://www.imdb.com/find?q={{ data.movie_name }}" target="_blank"
            title="Find this movie on IMDb">IMDb</a>
         <a class="btn" href="{{ url_for('detail_info', movie_id=data.movie_id) }}">详情</a>
         <a class="btn" href="{{ url_for('edit', movie_id=data.movie_id) }}">Edit</a>
         <form class="inline-form" method="post" action="{{ url_for('.delete', movie_id=data.movie_id) }}">
-             <input class="btn" type="submit" name="delete" value="Delete"
-                    onclick="return confirm('Are you sure?')">
+            <input class="btn" type="submit" name="delete" value="Delete"
+                   onclick="return confirm('Are you sure?')">
         </form>
-    </span></li>
+
+
+    </li>
+    <hr>
     {% endfor %}
 
 </ul>
 
 <p>{{ new_combined_data|length }} Titles</p>
-<!-- 在模板中可以直接使用 current_user 变量 -->
-
-<!--<form method="post">-->
-<!--    last_movies_id<input value="{{last_movies_id}}" type="text" name="movie_id" autocomplete="off" required><br/>-->
-<!--    movie_name <input type="text" name="movie_name" autocomplete="off" required><br/>-->
-<!--    Year <input type="text" name="year" autocomplete="off" required><br/>-->
-<!--    release_date <input type="text" name="release_date" autocomplete="off" required><br/>-->
-<!--    country <input type="text" name="country" autocomplete="off" required><br/>-->
-<!--    type <input type="text" name="movie_type" autocomplete="off" required><br/>-->
-<!--    box <input type="text" name="box" autocomplete="off" required><br/>-->
-<!--    <div>-->
-<!--        <label>演员:</label>-->
-<!--        <select name="actor_name">-->
-<!--            {% for actor in actors %}-->
-<!--            <option>{{actor.actor_name}}</option>-->
-<!--            {% endfor %}-->
-<!--        </select>-->
-<!--    </div>-->
-
-<!--    关系<input type="text" name="relation" autocomplete="off" required><br/>-->
-<!--    <input class="btn" type="submit" name="submit" value="Add"><br/>-->
-<!--</form>-->
 
 
+{% if current_user.is_authenticated %}
 <form action="/" method="POST">
-    <table>
+    <table id="actorTable">
         <input value="{{ last_movies_id }}" type="hidden" name="movie_id" autocomplete="off" required>
         <tr>
             <td><label for="movie_name">movie_name</label></td>
@@ -114,26 +97,27 @@
             <td><input type="text" class="form-control" id="box" name="box" autocomplete="off" required></td>
         </tr>
         <tr>
-            <td><label for="actors">演员</label></td>
+            <td><label for="actors">actor</label></td>
+            <td><input type="text" class="form-control" id="actor" name="actors" autocomplete="off" required></td>
+
+
             <td>
-                <select name="actor_id" id="actor_id" class="form-control">
-                    {% for actor in actors %}
-                    <option value="{{ actor.actor_id }}">{{ actor.actor_name }}</option>
-                    {% endfor %}
-                </select>
+                <label for="relation">relation</label>
+                <input type="text" class="form-control" id="relation" name="relation" autocomplete="off" required>
             </td>
+
         </tr>
+
+
         <tr>
-            <td><label for="relation">关系</label></td>
-            <td><input type="text" class="form-control" id="relation" name="relation" autocomplete="off" required></td>
-        </tr>
-        <tr>
-            <td></td>
+            <td id="add_one_actor">
+                <button onclick="addActorRow()">新增演员</button>
+            </td>
             <td><input class="btn" type="submit" name="submit" value="Add"></td>
         </tr>
     </table>
 </form>
-
+{% endif %}
 
 <img alt="Walking Totoro" class="totoro" src="{{ url_for('static', filename='images/totoro.gif') }}" title="to~to~ro~">
 {% endblock %}
